--- a/index_style.css
+++ b/index_style.css
@@ -50,6 +50,7 @@ table {
 div {
     text-align: center;
     border-color: #FF7F50;
+      border-style: solid;
      border-width: 3px;
     padding: 6px 12px 8px 16px;
 }
